--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                 </button>
             </nav>
         </div>
+<a href="https://alexbahy-tech.github.io/smartkurikulumsmkn1mt/" class="flex items-center justify-center gap-2 w-full py-3 bg-red-50 text-red-500 hover:bg-red-500 hover:text-white rounded-xl text-xs font-bold transition-all mb-4 border border-red-100 group">
+                <i class="fa-solid fa-arrow-right-from-bracket group-hover:-translate-x-1 transition-transform"></i> Keluar Aplikasi
+            </a>
 
         <div class="mt-auto p-6 border-t border-slate-200/50 text-center">
             <p class="text-[10px] text-slate-500 font-medium">&copy; 2024-2027 Academic System</p>
